slight typo changes

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
 $primary-color:#414141;
-$secondary-color:#ccac40;
+$secondary-color:#008080;
 $show-home-image:true;
 $home-image: url(../img/background.jpg);
 $background-opacity:0.9;
